--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.2.4",
-    "css-loader": "^5.0.2",
-    "postcss": "^8.2.6",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.3",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.2.8",
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.23.0",
+    "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
